--- a/Styles/fonts.css
+++ b/Styles/fonts.css
@@ -1,32 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind+Vadodara&family=Prompt:wght@300;400;500&family=Yantramanav:wght@700&display=swap');
-
-.yantramanav-bold {
-   font-family: "Yantramanav", sans-serif;
-   font-weight: 700;
-   font-style: normal;
-}
-
-.hind-vadodara-regular {
-   font-family: "Hind Vadodara", sans-serif;
-   font-weight: 400;
-   font-style: normal;
-}
-
-.prompt-light {
-   font-family: "Prompt", sans-serif;
-   font-weight: 300;
-   font-style: normal;
-}
- 
-.prompt-regular {
-   font-family: "Prompt", sans-serif;
-   font-weight: 400;
-   font-style: normal;
-}
- 
-.prompt-medium {
-   font-family: "Prompt", sans-serif;
-   font-weight: 500;
-   font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500&family=Yantramanav:wght@700&display=swap');
  
